--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ subtitle: Help people find benefits that meet their needs
 # For user/organization pages set this to an empty string
 # When working locally use jekyll serve --baseurl '' so that you can view everything at localhost:4000
 # See http://jekyllrb.com/docs/github-pages/ for more info
-#baseurl: ''
-baseurl: '/find-benefits-and-services-documentation'
+baseurl: ''
+# baseurl: '/find-benefits-and-services-documentation'
 
 # Author/Organization info to be displayed in the templates
 author:
