--- a/admin/config.yml
+++ b/admin/config.yml
@@ -14,6 +14,24 @@ collections:
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "page"}
       - {label: "Title", name: "title", widget: "string", tagname: "h1"}
-      - {label: "Translation url", name: "trans_url", widget: "string"}
       - {label: "Lang", name: "lang", widget: "hidden", default: "en"}
       - {label: "Body", name: "body", widget: "markdown", required: true}
+      - label: "Translation url"
+        name: "trans_url"
+        widget: "relation"
+        collection: "docFr"
+        searchFields: ["title"]
+        valueField: "tile"
+        displayFields: ["title"]
+  - name: 'docFr'
+    label: 'Documentation - FR'
+    folder: '_pages/fr'
+    sort: "title:asc"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - {label: "Layout", name: "layout", widget: "hidden", default: "page"}
+      - {label: "Titre", name: "title", widget: "string", tagname: "h1"}
+      - {label: "Adresse pour la traduction", name: "trans_url", widget: "string"}
+      - {label: "Lang", name: "lang", widget: "hidden", default: "en"}
+      - {label: "Corps du texte", name: "body", widget: "markdown", required: true}
