--- a/admin/config.yml
+++ b/admin/config.yml
@@ -16,12 +16,13 @@ collections:
       - {label: "Title", name: "title", widget: "string", tagname: "h1"}
       - {label: "Lang", name: "lang", widget: "hidden", default: "en"}
       - {label: "Body", name: "body", widget: "markdown", required: true}
+      - {label: "Permalink", name: "permalink", widget: "string", default: "en/{{title}}"}
       - label: "Translation url"
         name: "trans_url"
         widget: "relation"
         collection: "docFr"
         searchFields: ["title"]
-        valueField: "tile"
+        valueField: "title"
         displayFields: ["title"]
   - name: 'docFr'
     label: 'Documentation - FR'
