--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ highlighter: rouge
 collections:
   pages:
     output: true
-    permalink: /:path/
+    permalink: /:title/
 
 # Title
 name: Find benefits and services
