--- a/admin/config.yml
+++ b/admin/config.yml
@@ -30,8 +30,7 @@ collections:
     fields:
       - {label: "Layout", name: "layout", widget: "hidden", default: "page"}
       - {label: "Titre", name: "title", widget: "string", tagname: "h1"}
-      - {label: "Adresse pour la traduction", name: "trans_url", widget: "string"}
-      - {label: "Lang", name: "lang", widget: "hidden", default: "en"}
+      - {label: "Lang", name: "lang", widget: "hidden", default: "fr"}
       - {label: "Corps du texte", name: "body", widget: "markdown", required: true}
       - label: "Translation url"
         name: "trans_url"
