change our collections structuring and let's see if we can hack together a way to sort menus

--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,12 @@ exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 markdown: kramdown
 highlighter: rouge
 
+collections_dir: pages
 collections:
-  pages:
+  en:
+    output: true
+    permalink: /:title/
+  fr:
     output: true
     permalink: /:title/
 
