Add menu ordering the loops to draw the menu are a bit wonky, and french ordering doesn't work yet

--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,8 @@ collections:
   fr:
     output: true
     permalink: /:title/
+  menu:
+    output: false
 
 # Title
 name: Find benefits and services
